<resources>
    <string name="app_name">Missing People</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="button_sign_in">LOG IN</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_comment">Comment</string>
    <string name="button_report">Report</string>
    <string name="log_out"><u>Log Out</u></string>
    <string name="send_email">Send Email</string>
    <string name="button_add_comment">Add Comment</string>



    <string name="change_password"><u>CHANGE PASSWORD</u></string>
    <string name="forgot_password"><u>FORGOT PASSWORD</u></string>
    <string name="create_account"><u>CREATE ACCOUNT</u></string>


    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_add_comment">Please Enter Valid Comment Only</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_mobile_number">Enter Valid Mobile Number</string>
    <string name="enter_old_password">Enter Old password</string>
    <string name="enter_new_password">Enter New password</string>
    <string name="enter_confirm_password">Enter Confirm password</string>

    <string name="menu_change_password">Change Password</string>
    <string name="menu_business">Business</string>
    <string name="menu_health">Health</string>
    <string name="menu_entertainment">Entertainment</string>
    <string name="menu_sport">Sport</string>
    <string name="menu_science">Science</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_feedback">FeedBack</string>
    <string name="menu_share">Share This App</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_and_registration">LoginAndRegistration</string>
    <string name="notes"><u>Important Notes</u></string>
</resources>