<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/prime_news_icon"
            android:title="@string/menu_all_news" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/business_icon"
            android:title="@string/menu_business" />

        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/entertainment_icon"
            android:title="@string/menu_entertainment" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/health_icon"
            android:title="@string/menu_health" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/sport_icon"
            android:title="@string/menu_sport" />

        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/science_icon"
            android:title="@string/menu_science" />

        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/technology_icon"
            android:title="@string/menu_technology" />
        <item
            android:id="@+id/nav_feedBack"
            android:icon="@drawable/technology_icon"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/menu_share" />
    </group>

</menu>
