<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dimen_40dp"
    android:layout_marginTop="@dimen/dimen_64dp"
    android:layout_marginRight="@dimen/dimen_40dp"
    android:layout_marginBottom="@dimen/dimen_64dp"
    android:background="@drawable/round_corner_button"
    android:backgroundTint="@color/brandColorCode21"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_first_name"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_last_name"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_email_address"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_password"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_mobile_number"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/enter_mobile_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        style="@style/buttonStyle"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:background="@drawable/round_corner_button"
        android:onClick="createAccountCall"
        android:text="@string/button_create_account" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/buttonStyle"
        android:layout_marginLeft="@dimen/font_size_16"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/font_size_16"
        android:onClick="cancelClick"
        android:background="@drawable/round_corner_button"
        android:text="@string/button_cancel" />
</LinearLayout>