<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/change_password_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/font_size_24"
    android:layout_marginRight="@dimen/font_size_24"
    android:padding="@dimen/font_size_24"
    android:background="@drawable/round_corner_button"
    android:backgroundTint="@color/brandColorCode1"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_change_pass_new_password"
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/brandColorCode3"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_change_pass_new_password"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_change_pass_confirm_password"
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/brandColorCode3"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_change_pass_confirm_password"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_forgot_password_update_button"
        style="@style/buttonStyle"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/round_corner_button"
        android:gravity="center"
        android:onClick="changePasswordLinkOnClick"
        android:text="@string/button_change_password" />

    <Button
        android:id="@+id/activity_forgot_password_cancel_button"
        style="@style/buttonStyle"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/round_corner_button"
        android:text="@string/button_cancel" />


</LinearLayout>