<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/change_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dimen_40dp"
    android:layout_marginTop="@dimen/dimen_104dp"
    android:layout_marginRight="@dimen/dimen_40dp"
    android:layout_marginBottom="@dimen/dimen_104dp"
    android:background="@drawable/round_corner_button"
    android:backgroundTint="@color/brandColorCode21"
    android:gravity="center"
    android:orientation="vertical">


    <!-- <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_change_pass_email_address"
         style="@style/textInputLayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/change_pass_email_address"
             style="@style/textInputLayoutEditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enter_email_address" />
     </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_change_pass_old_password"
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_pass_old_password"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_old_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_change_pass_new_password"
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_pass_new_password"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_password"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_change_pass_confirm_password"
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_pass_confirm_password"
            style="@style/textInputLayoutEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_confirm_password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_password_button"
        style="@style/buttonStyle"
        android:onClick="changePasswordOnClick"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/round_corner_button"
        android:gravity="center"

        android:text="@string/button_change_password" />

    <Button
        android:id="@+id/login_cancel_button"
        style="@style/buttonStyle"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/round_corner_button"
        android:text="@string/button_cancel" />


</LinearLayout>