<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brandColorCode2"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:isScrollContainer="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/single_person_postImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_320dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen_24dp"
                android:layout_marginRight="@dimen/dimen_24dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/single_person_name"
                style="@style/singlePersonTextViewBoldStyle"
                android:gravity="center_horizontal"
                android:maxLines="3"
                android:textSize="@dimen/font_size_24"
                android:textStyle="bold"
                android:text="Ankitkumar Rana" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:layout_marginRight="@dimen/dimen_16dp"
                android:background="@drawable/alert_text_background"
                android:orientation="vertical">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:text="@string/notes" />

                <TextView
                    android:id="@+id/single_person_alert_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:background="@drawable/alert_text_background"
                    android:maxLines="20"
                    android:padding="@dimen/dimen_8dp"
                    android:text="Ankitkumar Rana is missing from Malydhara Ankitkumar Rana is missing from Malydhara Ankitkumar Rana is missing from Malydhara Ankitkumar Rana is missing from Malydhara,Dungari,checkpost Ankitkumar Rana is missing from Malydhara,Dungari,checkpost Ankitkumar Rana is missing from Malydhara,Dungari,checkpost Ankitkumar Rana is missing from Malydhara,Dungari,checkpost "
                    android:textAlignment="center"
                    android:textColor="@color/brandColorCode7"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Father's Name" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_father_name"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="Maheshbhai Rana" />
            </LinearLayout>


            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Mother's Name" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_mother_name"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="Bhavnaben Rana" />
            </LinearLayout>


            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Gender" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_gender"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="Male" />
            </LinearLayout>

            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Age" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_age"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="24 Years" />
            </LinearLayout>


            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Height" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_height"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="5 Feet 9 Inches" />
            </LinearLayout>

            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Weight" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_weight"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="80 Kgs" />
            </LinearLayout>

            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Eye Color" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_eye_color"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="Brown" />
            </LinearLayout>


            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Hair Color" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_hair_color"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="Black" />
            </LinearLayout>


            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Identity Mark" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_identity_mark"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="teeth Braces,Medium Height" />
            </LinearLayout>

            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Posted By" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_posted_by"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="Ankikumar Rana" />
            </LinearLayout>


            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="Contact Detail" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_contact_detail"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:linksClickable="true"
                    android:text="787872130" />
            </LinearLayout>

            <LinearLayout style="@style/linearLayoutStyle">

                <TextView
                    style="@style/singlePersonTextViewStyle"
                    android:text="City and State" />

                <ImageView style="@style/imageStyle" />

                <TextView
                    android:id="@+id/single_person_city_state"
                    style="@style/singlePersonTextViewBoldStyle"
                    android:text="Valsad Gujarat" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_56dp"
        android:background="@color/brandColorCode2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/single_person_comment_button"
            style="@style/bottomButtonStyle"
            android:onClick="onAddButtonClick"
            android:text="@string/button_comment" />

        <Button
            android:id="@+id/single_person_Report_button"
            style="@style/bottomButtonStyle"
            android:text="@string/button_report" />

        <Button
            android:id="@+id/single_person_cancel_button"
            style="@style/bottomButtonStyle"
            android:text="@string/button_cancel" />
    </LinearLayout>
</LinearLayout>